--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="styles/style-v0-2.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>agil</title>
     <!-- font from https://fonts.google.com/specimen/Open+Sans#standard-styles -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@557&display=swap" rel="stylesheet">
