--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="style.css" rel="stylesheet">
+    <link href="styles/style-v0-2.css" rel="stylesheet">
     <title>agil</title>
     <!-- font from https://fonts.google.com/specimen/Open+Sans#standard-styles -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@557&display=swap" rel="stylesheet">
@@ -36,7 +36,10 @@
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
             in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
             mollit anim id est laborum.</div>
-        <div class="article">photos</div>
+        <div class="article"><img 
+            src="https://images.unsplash.com/photo-1648887934497-f4c036af6c79?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80"><img 
+            src="https://images.unsplash.com/photo-1648737851207-01d56d558cd3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80">
+        </div>
         <div class="separator2"><!-- separator2--></div>
         <div class="footer-address">Rua das Cancelas, 3830-023 Ílhavo</div>
         <div class="footer-separator"><!-- footer-separator--></div>
