--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         </div>  
         <div class="separator1"><!-- separator1--></div>
         <div class="left-column">
-            Braços (2021)<br><br>
+            <p>Braços (2021)<br><br>
             
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit 
             in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-            mollit anim id est laborum.</div>
+            mollit anim id est laborum.</p></div>
         <div class="article"><img 
             src="https://images.unsplash.com/photo-1648887934497-f4c036af6c79?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80"><img 
             src="https://images.unsplash.com/photo-1648737851207-01d56d558cd3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80">
