Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="nav-1"></div>
         <div class="nav-main">
-            <span class="menu-link"><a href="main.html" id="menu-link-active">SOBRE</a></span>
+            <span class="menu-link"><a href="index.html" id="menu-link-active">SOBRE</a></span>
             <span class="menu-link"><a href="formacao.html">FORMAÇÃO</a></span>
             <span class="menu-link"><a href="experiencia.html">EXPERIÊNCIA</a></span>
             <span class="menu-link"><a href="contacto.html">CONTACTO</a></span>
