--- a/formacao.html
+++ b/formacao.html
@@ -34,7 +34,7 @@
 
         <div class="nav-1"></div>
         <div class="nav-main">
-            <span class="menu-link"><a href="main.html">SOBRE</a></span>
+            <span class="menu-link"><a href="index.html">SOBRE</a></span>
             <span class="menu-link"><a href="formacao.html" id="menu-link-active">FORMAÇÃO</a></span>
             <span class="menu-link"><a href="experiencia.html">EXPERIÊNCIA</a></span>
             <span class="menu-link"><a href="contacto.html">CONTACTO</a></span>
