--- a/formacao.html
+++ b/formacao.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Texto descritivo sobre a Associação. Usar keywords para o google AQUI.">
     <!-- browser icon -->    
     <link rel="icon" href="images/agil-icon.png" type="image/x-icon">
-    <script type="text/javascript" src="formacao-functions.js"></script>
+    <script type="text/javascript" src="main-functions.js"></script>
 
 </head>
 
