--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="art-main">
             <div id = "apresentacao">
-                <p>Olá e boas vindas a esta página! </p>
+                <p style="font-size: 18px"><b>Olá e boas vindas a esta página!</b></p>
                 <p>O meu nome é Luís Vieira e sou <b>Engenheiro Mecânico</b>.</p>
                 <p>Este website foi criado por mim com conhecimentos básicos de HTML, CSS e Javascript. Não serve para os demonstrar, 
                 mas sim dar a conhecer um pouco de mim a nível pessoal e profissional, algo que num formato tradicional 
