--- a/formacao.html
+++ b/formacao.html
@@ -47,9 +47,9 @@
 
         <div class="art-1">
             <ul>
-                <a href="#"><li id="nav-passatempos" class="nav-side" onclick=sobre_passatempos()><span class="sidebar">LICENCIATURA</span></li></a>
-                <a href="#"><li id="nav-percurso" class="nav-side" onclick=sobre_percurso()><span class="sidebar">MESTRADO</span></li></a>
-                <a href="#"><li id="nav-motivacao" class="nav-side" onclick=sobre_motivacao()><span class="sidebar">DISSERTAÇÃO</span></li></a>
+                <a href="#"><li id="nav-passatempos" class="nav-side" onclick=sobre_passatempos()><span class="sidebar">ENGENHARIA MECÂNICA</span></li></a>
+                <a href="#"><li id="nav-percurso" class="nav-side" onclick=sobre_percurso()><span class="sidebar">VISÃO ARTIFICIAL</span></li></a>
+                <a href="#"><li id="nav-motivacao" class="nav-side" onclick=sobre_motivacao()><span class="sidebar">PROCESSAMENTO DE SINAL</span></li></a>
                 <a href="#"><li id="nav-apresentacao" class="nav-active" onclick=sobre_apresentacao()><span class="sidebar">PYTHON & OPENCV</span></li></a>
             </ul>
         </div>
@@ -115,7 +115,7 @@
             <div id="motivacao">
                 <!-- Dissertação -->
                 
-                <p class="article-topic">Síntese digital-analógica na geração de sinal
+                <p class="article-topic">Dissertação: Síntese digital-analógica na geração de sinal
                     <sup><a href="http://hdl.handle.net/10773/31343" target="_blank" class="article-topic">[8]</a></sup></p>
                 <p>A atividade de investigação na área da acústica e ruído exige a disponibilidade de diversa instrumentação, entre a qual uma unidade de síntese 
                 analógica/digital capaz de gerar ondas complexas na gama audível do espectro. O desenvolvimento e a disponibilidade da tecnologia no mercado 
