--- a/experiencia.html
+++ b/experiencia.html
@@ -57,7 +57,8 @@
             <div id = "apresentacao">
 
                 <p>A minha experiência na empresa Vertequip <sup><a href="https://www.vertequip.com" target="_blank" class="text-topic">[16]</a></sup> foi extremamente positiva na qual aprendi muito sobre uma grande
-                variedade de assuntos com aplicação industrial e gestão empresarial. Fazer parte de uma equipa pequena permitiu duas coisas: em primeiro, um ambiente de partilha de conhecimento e de decisões de uma 
+                variedade de assuntos com aplicação industrial e gestão empresarial. </p>
+                <p>Fazer parte de uma equipa pequena permitiu duas coisas: em primeiro, um ambiente de partilha de conhecimento e de decisões de uma 
                 forma muito dinâmica; em segundo lugar, obrigou-me a desenvolver competências em áreas de trabalho muito distintas. Uma passagem extremamente imprevisível onde todos os dias eram diferentes, o que 
                 me fez crescer imenso.</p>
 
