--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@557&display=swap" rel="stylesheet">
     <!-- author and meta tags -->
     <meta name="author" content="Luís Miguel Vieira">
-    <meta name="description" content="Texto descritivo sobre a Associação. Usar keywords para o google AQUI.">
+    <meta name="description" content="Engenheiro Mecânico Programador com formação em Eletrónica">
     <!-- browser icon -->    
     <link rel="icon" href="images/agil-icon.png" type="image/x-icon">
     <script type="text/javascript" src="main-functions.js"></script>
