--- a/experiencia.html
+++ b/experiencia.html
@@ -65,21 +65,21 @@
                 <p>Apresento de seguida os tópicos relevantes da minha experiência e algumas imagens que, por respeito à confidencialidade, coloco apenas aquelas que estão disponíveis publicamente no site da empresa.</p>
 
                 <p class="article-topic">Desenvolvimento de produto</p>
-                <p>Implementação de melhorias a produtos já existentes com base no feedback dos clientes</p>
-                <p>Desenho 3D em Solidworks</p>
-                <p>Desenhos de produção para Sheet metal</p>
-                <p>Desenho de Assembly e BOM</p>
-                <p>Gestão de projeto e encomenda de stock para vendas</p>
+                <p>- Implementação de melhorias a produtos já existentes com base no feedback dos clientes</p>
+                <p>- Desenho 3D em Solidworks</p>
+                <p>- Desenhos de produção para Sheet metal</p>
+                <p>- Desenho de Assembly e BOM</p>
+                <p>- Gestão de projeto e encomenda de stock para vendas</p>
                 <p class="article-topic">Montagem de quadros elétricos</p>
-                <p>Desenho de esquemas elétricos dos produtos da empresa</p>
-                <p>Adição de funcionalidades a quadros elétricos já existentes</p>
-                <p>Definição da disposição dos componentes no interior dos quadros e a respetiva montagem</p>
-                <p>Responsável pela escolha e aquisição de todo o material</p>
+                <p>- Desenho de esquemas elétricos dos produtos da empresa</p>
+                <p>- Adição de funcionalidades a quadros elétricos já existentes</p>
+                <p>- Definição da disposição dos componentes no interior dos quadros e a respetiva montagem</p>
+                <p>- Responsável pela escolha e aquisição de todo o material</p>
                 <p class="article-topic">Desenho vetorial</p>
-                <p>Desenho de sinalização de aviso para contexto industrial e de obra</p>
-                <p>Desenho do branding dos produtos</p>
-                <p>Contacto direto com empresas de produção de vinil de recorte</p>
-                <p>Utilização intensiva do software Inkscape</p>
+                <p>- Desenho de sinalização de aviso para contexto industrial e de obra</p>
+                <p>- Desenho do branding dos produtos</p>
+                <p>- Contacto direto com empresas de produção de vinil de recorte</p>
+                <p>- Utilização intensiva do software Inkscape</p>
 
                 <!-- <p class="article-quote">No MIEM existe uma forte componente em programação e eletrónica</p>
                 <p>que nos dá uma boa base para futuramente assimilar conhecimentos nestas áreas a nível profissional.</p>
